Add AJAX form to create a new playlist, comment through rest of file

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -3,3 +3,5 @@
 <ul>
 <%= render partial: "playlist", collection: @playlists %>
 </ul>
+
+<%= render partial: "form", local: {playlist: Playlist.new} %>
