--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -4,4 +4,4 @@
 <%= render partial: "songs/song", collection: @playlist.songs %>
 </ul>
 
-<%= render partial: "songs/form", locals: {playlist: @playlist, song: @song}%>
+<%= render partial: "songs/form"%>
