--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([playlist, song], remote:true, html: {class: "red"}) do |f| %>
+<%= form_for([Playlist.find(params[:id]), Song.new], remote:true, html: {class: "red"}) do |f| %>
   <%= f.text_field :title, placeholder: "title" %>
   <%= f.text_field :artist, placeholder: "artist" %>
   <%= f.submit %>
