--- a/app/views/playlists/_playlist.html.erb
+++ b/app/views/playlists/_playlist.html.erb
@@ -1,1 +1,4 @@
-<li><%= link_to playlist.name, playlist_path(playlist) %></li>
+<li><%= link_to playlist.name, playlist_path(playlist) %> |
+  <%= link_to "deelete", playlist, method: :delete %>
+|
+  <%=link_to "edit~", playlist, method: :put%></li>
